--- a/ЕГЭ/Информатика/Полеты информатики.md
+++ b/ЕГЭ/Информатика/Полеты информатики.md
@@ -4,10 +4,10 @@
 
 ```chart
 type: line
-labels: [final 1, final 2, final 3]
+labels: [final 1, final 2, final 3, s1, s2, s3, s4, s5, s6, s7, s8]
 series:
   - title: Informatics
-    data: [0, 56, 1]
+    data: [0, 56, 1, 64, 75, 64, 67, 67, 70, 72, 75]
 tension: 0.2
 width: 80%
 labelColors: false
