--- a/ЕГЭ/Информатика/Полеты информатики.md
+++ b/ЕГЭ/Информатика/Полеты информатики.md
@@ -4,15 +4,15 @@
 
 ```chart
 type: line
-labels: [final 1, final 2, final 3, s1, s2, s3, s4, s5, s6, s7, s8]
+labels: [final 1, final 2, final 3, s1, s2, s3, s4, s5, s6, s7, s8, t1]
 series:
   - title: Informatics
-    data: [0, 56, 1, 64, 75, 64, 67, 67, 70, 72, 75]
+    data: [0, 56, 1, 64, 75, 64, 67, 67, 70, 72, 75, 75]
 tension: 0.2
-width: 80%
+width: 100%
 labelColors: false
-fill: false
-beginAtZero: false
+fill: true
+beginAtZero: true
 bestFit: false
 bestFitTitle: undefined
 bestFitNumber: 0
