--- a/ЕГЭ/Математика/Полеты математика.md
+++ b/ЕГЭ/Математика/Полеты математика.md
@@ -6,9 +6,9 @@ series:
   - title: Math
     data: [64, 74, 78, 64, 78]
 tension: 0.2
-width: 80%
+width: 100%
 labelColors: false
-fill: false
+fill: true
 beginAtZero: false
 bestFit: false
 bestFitTitle: undefined
