--- a/ЕГЭ/Русский язык/Полеты русский язык.md
+++ b/ЕГЭ/Русский язык/Полеты русский язык.md
@@ -7,9 +7,9 @@ series:
   - title: Russian
     data: [36, 39, 40, 46, 48, 41]
 tension: 0.2
-width: 80%
+width: 100%
 labelColors: false
-fill: false
+fill: true
 beginAtZero: false
 bestFit: false
 bestFitTitle: undefined
