--- a/ЕГЭ/Математика/Полеты математика.md
+++ b/ЕГЭ/Математика/Полеты математика.md
@@ -18,3 +18,4 @@ bestFitNumber: 0
 - [[Профиль 16 задание]]
 - [[Подготовка к последнему пробнику по математике]]
 - [[Июль. Вариант 1]]
+- [[ЕГЭ/Математика/Сентябрь]]
