--- a/ЕГЭ/Информатика/Полеты информатики.md
+++ b/ЕГЭ/Информатика/Полеты информатики.md
@@ -1,4 +1,4 @@
-## Обозначения:
+**Обозначения:
 - try - вариант подготовки
 - final - вариант пробника
 
@@ -26,6 +26,8 @@ bestFitNumber: 0
 - [[13]]
 - [[15]]
 - [[19-21-22]]
+- [[25]]
 - [[Июнь. Вариант 2]]
 - [[Июль]]
+- [[ЕГЭ/Информатика/Сентябрь]]
 
