--- a/ЕГЭ/Математика/Финансовые задачи.md
+++ b/ЕГЭ/Математика/Финансовые задачи.md
@@ -51,8 +51,41 @@ S = сумма долга
 | 15д  | 0                                     |
 Выплаты обр. арифм. прогрессию
 Воспользуемся формулой
-## $S_n = \frac{a_1 + a_n}{2} * h$
+## $S_n = \frac{a_1 + a_n}{2} \cdot h$
 ## $О.С.В = 0,59$
 
-# $\frac{1,03S - \frac{10}{11}S + \frac{1}{11}S * 1,03}{2} * 11 = 0,59$
+# $\frac{1,03S - \frac{10}{11}S + \frac{1}{11}S \cdot 1,03}{2} \cdot 11 = 0,59$
 Ответ: 0,5 млн. р.
+
+---
+## 3::
+Пусть S - сумма долга
+апрель - месяц платежа
+
+| Дата    | Сумма долга     | Выплаты            |
+| ------- | --------------- | ------------------ |
+| и. 2016 | S               |                    |
+| я. 2017 | 1,25S           |                    |
+| а. 2017 | => была выплата | 1,25S - 0,7S       |
+| и. 2017 | 0,7S            |                    |
+| я. 2018 | 1,25 * 0,7S     |                    |
+| а. 2018 | => б.в.         | 1,25 * 0,7S - 0,4S |
+| и. 2018 | 0,4S            |                    |
+| я. 2019 | 1,25 * 0,4S     |                    |
+| а. 2019 | => б.в.         | 1,25 * 0,4S        |
+| и. 2019 | 0               |                    |
+
+## $$
+
+\begin{equation}
+\begin{cases}
+   1,25S - 0,7S > 5
+   \\
+   1,25 \cdot 0,7S - 0,4S > 5
+   \\
+   1,25 \cdot 0,4S > 5
+\end{cases}
+\end{equation}
+
+$$
+Ответ: 11 млн. р.
